[package]
name = "rust-cef-derive"
version = "0.0.1"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
authors = ["Archis Gore <archis@polyverse.com>"]
repository = "https://github.com/polyverse/rust-cef/rust-cef-macros"
description = """Macros to derive the ToCef trait implementation for any struct
as well as macros to annotate members to map to various CEF headers or key-value pairs.

This enables having a structured representation inside Rust to be serialized
as CEF log entries that can be written to log files or syslog."""

[lib]
proc-macro = true

[dependencies]
syn = "1.0.33"
quote = "1.0.7"

# Always keep this in sync within the repo
rust-cef = { path = "../" }