[package]
name = "rust-cef-derive"
version = "0.0.7"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
authors = ["Archis Gore <archis@polyverse.com>"]
autotests = false
repository = "https://github.com/polyverse/rust-cef/rust-cef-macros"
description = """Macros to derive the ToCef trait implementation for any struct
as well as macros to annotate members to map to various CEF headers or key-value pairs.

This enables having a structured representation inside Rust to be serialized
as CEF log entries that can be written to log files or syslog."""

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.34", features = ["extra-traits"]}
quote = "1.0.7"
proc-macro2 = "1.0.18"
lazy_static = "1.4.0"
inflections = "1.1.1"

# Always keep this in sync within the repo
rust-cef = "0.0.5"

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
# https://github.com/dtolnay/trybuild
trybuild = { version = "1.0", features = ["diff"] }
